5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1807_2566.log
== TEST (2019-06-05 10:52:06) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
print(cont)
-- ERROR:
File "XXXX", line 6
    for i in range(size(v):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 10:52:17) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 10:52:37) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 10:52:43) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 10:53:53) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 10:54:00) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 11:01:45) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
for i in cont:
	cont[i]= (cont[i]/sum(size(cont)))*100
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 09:48:00) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			

print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 09:48:47) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
a=sum(cont)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 09:49:02) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
a=sum(cont)
print(a)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 09:49:40) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
a=sum(size(cont))
print(a)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 09:50:09) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
a=sum(cont)
print(a)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 09:53:15) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
a=sum(cont)
print(a)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 09:53:33) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
a=sum(cont)
print(a)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 09:56:33) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
d=sum(cont)
print(d)
for a in range(size(cont)):
	me[a]=cont[a]/d
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 09:57:52) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
d=sum(cont)

for a in range(size(cont)):
	me[a]=(cont[a]/d) *100
print(round(me,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 09:58:57) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
d=sum(cont)

for a in range(size(cont)):
	cont[a]=(cont[a]/d) *100
print(round(me,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 09:59:19) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
d=sum(cont)

for a in range(size(cont)):
	cont[a]=(cont[a]/d) *100
print(round(cont,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 09:59:32) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
d=sum(cont)

for a in range(size(cont)):
	cont[a]=(cont[a]/d) *100
print(round(cont,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:00:19) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
d=sum(cont)

for a in range(size(cont)):
	cont[a]=(cont[a]/d) *100
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:01:04) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
d=sum(cont)

for a in range(size(cont)):
	cont[a]=(cont[a]/d) *100
print(cont)
-- EXECUTION TIME:
1.06118
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:04:27) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
d=sum(cont)

for a in range(size(cont)):
	cont[a]=(cont[a]/d) *100
	cont[a]=round(cont[a],1)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:04:53) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
d=sum(cont)

for a in range(size(cont)):
	cont[a]=(cont[a]/d) *100
	cont[a]=round(cont[a],1)
print(cont)
-- EXECUTION TIME:
1.28455
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:05:19) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
d=sum(cont)

for a in range(size(cont)):
	cont[a]=(cont[a]/d) *100
	cont[a]=round(cont[a],2)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:05:37) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
d=sum(cont)

for a in range(size(cont)):
	cont[a]=(cont[a]/d) *100
	cont[a]=round(cont[a],2)
print(cont)
-- EXECUTION TIME:
1.1077
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0 18 25 37]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4  8 16 20 20 32]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15  7 23  7 15 30]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:05:40) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=int)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
d=sum(cont)

for a in range(size(cont)):
	cont[a]=(cont[a]/d) *100
	cont[a]=round(cont[a],2)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 10:07:56) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=float)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
d=sum(cont)

for a in range(size(cont)):
	cont[a]=(cont[a]/d) *100
	cont[a]=round(cont[a],2)
print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:08:24) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=float)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
d=sum(cont)

for a in range(size(cont)):
	cont[a]=(cont[a]/d) *100
	cont[a]=round(cont[a],2)
print(cont)
-- EXECUTION TIME:
0.910297
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.   18.75 25.   37.5 ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.38  7.69 23.08  7.69 15.38 30.77]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 10:08:33) 
-- CODE:
from numpy import*
cont=zeros(6, dtype=float)

v= array(eval(input("Insira o bla bla bla:")))

for i in range(size(v)):
	if(v[i]==2):
		cont[0]=cont[0]+1
	elif(v[i]==3):
		cont[1]=cont[1]+1
	elif(v[i]==4):
		cont[2]=cont[2]+1
	elif(v[i]==5):
		cont[3]=cont[3]+1
	elif(v[i]==6):
		cont[4]=cont[4]+1
	elif(v[i]==7):
		cont[5]=cont[5]+1			
d=sum(cont)

for a in range(size(cont)):
	cont[a]=(cont[a]/d) *100
	cont[a]=round(cont[a],1)
print(cont)
-- EXECUTION TIME:
1.01701
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
